fix contrast on mabel buttons

--- a/source/_patterns/01-molecules/search/mabel-search/_mabel-search.scss
+++ b/source/_patterns/01-molecules/search/mabel-search/_mabel-search.scss
@@ -57,6 +57,8 @@ $mabel-label-font-size: calc(#{$mabel-label-min-font-size} + #{strip-unit($mabel
       padding: $standard-spacing;
       border-radius: 0;
       background: $blue;
+      color: $white;
+      box-shadow: none;
       border: none;
 
       &:active,
