--- a/source/_patterns/04-sites/mabel/_mabel.scss
+++ b/source/_patterns/04-sites/mabel/_mabel.scss
@@ -138,7 +138,7 @@ $mabel-site-name-height: 44px;
       text-align: right;
 
       .form-submit {
-        background: $dark-blue;
+        width: 100%;
         font-size: 1em;
 
         &:hover,
